--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=f25dd27f19d9c0e711194f29a0870751
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL=mysql://new_user:MySecure_password1987@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
