back yekhdm bel likes wel tri

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,8 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+product_sort:
+    path: /products/sort
+    controller: App\Controller\ProductController::sortProducts
+    methods: ['GET']
